将索引初始化收敛到连接建立，修复快照语义与删除校验，完善事件持久化边界。